--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -88,14 +88,16 @@
                         <a href="#" class="text-gray-200 hover:text-white transition">About us</a>
                         <a href="#" class="text-gray-200 hover:text-white transition">Contacts</a>
                     </div>
-
                     <div class="flex items-center gap-4">
+                        <% if(login){ %>
                             <a href="/user/login-page" class="ml-auto justify-self-end text-gray-200 hover:text-white transition">
-                                Register
+                                Login
                             </a>
-                        <a href="/user/logout" class="ml-auto justify-self-end text-red-500 hover:text-red-500 transition">
-                            Logout
-                        </a>
+                        <% }else{ %>
+                            <a href="/user/logout" class="ml-auto justify-self-end text-red-500 hover:text-red-500 transition">
+                                Logout
+                            </a>
+                        <% } %>
                     </div>
                 </div>
                 <!-- nav menu end -->
