--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -5,7 +5,7 @@
             <div class="xl:grid xl:grid-cols-3 xl:gap-8">
                 <!-- footer text -->
                 <div class="space-y-8 xl:col-span-1">
-                    <h1 class="text-2xl font-bold text-primary">Atheera</h1>
+                    <h1 class="text-3xl font-semibold italic text-primary">Scratch</h1>
                     <p class="text-gray-500 text-base">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio facere rem
                     </p>
@@ -117,7 +117,8 @@
     <!-- copyright -->
     <div class="bg-gray-800 py-4">
         <div class="container flex items-center justify-between">
-            <p class="text-white">© Atheera - All Rights Reserved</p>
+            <!-- <p class="text-white">© Atheera - All Rights Reserved</p> -->
+            <p class="text-white">© Scratch - All Rights Reserved</p>
             <div>
                 <img src="/images/methods.png" class="h-5">
             </div>
