--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -19,8 +19,8 @@
         <div class="container flex items-center justify-between">
             <!-- logo -->
             <a href="#" class="w-32 flex gap-2">
-                <img class="rounded-sm w-[55px] md:w-[60px]" src="/images/icons/favicon.png" alt="">
-                 <!-- <h1 class="text-2xl font-bold text-primary">Atheera</h1> -->
+                <!-- <img class="rounded-sm w-[55px] md:w-[60px]" src="/images/icons/favicon.png" alt=""> -->
+                 <h1 class="text-3xl font-semibold italic text-primary">Scratch</h1>
             </a>
             <!-- logo end -->
             <!-- navicons -->
